SERVER-20866: Fix race in rollback of oplog insertions